--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-animated": "^1.0.1",
     "vite": "^4.4.5"
   }
 }
